--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-        <html>
-        <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0" />
-        <title>Crio Feed</title>
-        <meta name="description" content="Crio Feed Website" />
-        <link rel="stylesheet" href="resources/css/index.css">
-        </head>
+  <html>
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0" />
+  <title>Crio Feed</title>
+  <meta name="description" content="Crio Feed Website" />
+  <link rel="stylesheet" href="resources/css/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  </head>
+  <body>
+<nav class="navbar bg-light">
+  <div class="container-fluid">
+  <div class="rectangle"></div>
+  <div><a class="navbar-brand title" href="#">Crio News Feed</a></div>
+  </div>
+</nav>
 
-        <body>
 
-        <div class="h1">Write your code in this file</div>
-        <script src="resources/data/magazines.js"></script>
-        <script src="resources/js/index.js"></script>
-        </body>
-        </html>
+<div id="header">
+  <p class="today">Today</p>
+  <p class="insights">The Insights you need to keep ahead</p>
+</div>
+
+<div class="col-12 col-xs-11 col-sm-11 col-md-11 col-lg-9">
+<div class="accordion" id="accordionExample">
+  </div>
+  </div>
+    
+  <script src="resources/data/magazines.js"></script>
+  <script src="resources/js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  </body>
+  </html>
